--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ninad Joshi-Portfolio</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
+
+    <header class="sticky">
+        <a href="#" class="logo">Ninad Joshi</a>
+        <div class="menu">
+            <ul>
+                <li><a href="#main">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#services">Education</a></li>
+                <li><a href="#work">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+    </header>
+
+    <main>
+        
+        <div class="content">
+            <p>Main Content</p>
+        </div>
+
+    </main>
     
 </body>
 </html>
