--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <li><a href="#main">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
-          <li><a href="#services">Education</a></li>
-          <li><a href="#work">Projects</a></li>
+          <li><a href="#edu">Education</a></li>
+          <li><a href="#proj">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -52,7 +52,7 @@
             <a target="_blank" href="https://github.com/Ninadjoshi212"
               ><i class="fab fa-github"></i
             ></a>
-            <a target="_blank" href="www.linkedin.com/in/ninadjoshi212"
+            <a target="_blank" href="https://linkedin.com/in/ninadjoshi212"
               ><i class="fab fa-linkedin"></i
             ></a>
           </div>
