--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h3>Java Backend Developer</h3>                    
                 </div>
                 
-                <a class="btn" href="./Assest/NinadJoshi.pdf" attributes-list download="Ninad-Joshi-Resume" >resume</a>
+                <a class="btn" href="./Assest/Ninad_Joshi_Resume.pdf" attributes-list download="Ninad_Joshi_Resume" >resume</a>
 
                 <div class="social">
                     <a target="_blank" href="https://github.com/Ninadjoshi212"><i class="fab fa-github"></i></a>
