--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     </div>
                     <div class="card reveal" id="fontosm">
                         <div class="contact-icon">
-                            <a target="_blank" rel="noreferrer" id="cicin" href="https://krut.wad@gmail.com">
+                            <a target="_blank" rel="noreferrer" id="cicin" href="https://ninadjoshi212@gmail.com">
                                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3m4DtcDKzM-N0BXc1FvR0Pipmo8ltFFfeog&usqp=CAU"
                                     alt="" height="100%" width="100%">
                         </div>
@@ -278,7 +278,7 @@
                     </div>
                     <div class="card reveal" id="fontosm">
                         <div class="contact-icon">
-                            <a target="_blank" rel="noreferrer" id="cicin" href="https://github.com/9325388255">
+                            <a target="_blank" rel="noreferrer" id="cicin" href="https://github.com/Ninadjoshi212">
                                 <img src="https://icons-for-free.com/iconfiles/png/512/github+icon-1320168274457504277.png"
                                     alt="" height="100%" width="100%">
                         </div>
