--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.c
                 <li><a href="#techstack" class="navlinks">Tech Stack</a></li>
                 <li><a href="#skills" class="navlinks">Skills</a></li>
                 <li><a href="#proj" class="navlinks">Projects</a></li>
+                <li><a href="#stat" class="navlinks">Statistics</a></li>
                 <li><a href="#contact" class="navlinks">Contact</a></li>
             </ul>
         </div>
@@ -262,7 +263,7 @@ href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.c
             </div>
         </section>
 
-        <section>
+        <section class="stat" id="stat">
 
             <div class="title reveal">
                 <h2 class="section-title">Statistics</h2>
