resume download/redirect done

--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
                     <a href="#contact" class="navbar__links" id="contact-page">Contact</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="./resources/resume/Ninad_Joshi_Resume.pdf" download=""
-                        onclick="window.location='https://drive.google.com/file/d/1K71c6m8PO2GLb5WM7E-o64R7S7Ih4la1/view?usp=share_link';"
-                        class="navbar__links" id="resume-page">Resume</a>
+                    <a href="./resources/resume/Ninad_Joshi_Resume.pdf"
+                    class="navbar__links"
+                    target="_blank"
+                    download=""
+                    onclick="window.open('https://drive.google.com/file/d/1K71c6m8PO2GLb5WM7E-o64R7S7Ih4la1/view?usp=share_link', '_blank');">
+                Resume</a>
                 </li>
             </ul>
         </div>
@@ -78,8 +81,10 @@
                 </div>
             </div>
 
-            <a href="./resources/resume/Ninad_Joshi_Resume.pdf" download=""
-                onclick="window.location='https://drive.google.com/file/d/1K71c6m8PO2GLb5WM7E-o64R7S7Ih4la1/view?usp=share_link';">
+            <a href="./resources/resume/Ninad_Joshi_Resume.pdf"
+            target="_blank"
+            download=""
+            onclick="window.open('https://drive.google.com/file/d/1K71c6m8PO2GLb5WM7E-o64R7S7Ih4la1/view?usp=share_link', '_blank');">
                 <button id="d_resume">Resume
                     <i class="fa fa-download"></i>
                 </button>
