--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             <a href="./resources/resume/Ninad_Joshi_Resume.pdf"
             target="_blank"
             download=""
+            id="btn_anchor"
             onclick="window.open('https://drive.google.com/file/d/1K71c6m8PO2GLb5WM7E-o64R7S7Ih4la1/view?usp=share_link', '_blank');">
                 <button id="d_resume">Resume
                     <i class="fa fa-download"></i>
@@ -340,10 +341,6 @@
             </div>
             <div class="statsrow">
                 <img src="https://github-readme-streak-stats.herokuapp.com/?user=Ninadjoshi212&theme=dark&hide_border=false"
-                    alt="">
-            </div>
-            <div class="statsrow">
-                <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Ninadjoshi212&theme=dark&hide_border=false&include_all_commits=true&count_private=false"
                     alt="">
             </div>
 
