--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
                     <a href="#about" class="navbar__links" id="about-page">About</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#skills" class="navbar__links" id="skills-page">Skills</a>
+                    <a href="#skills" class="navbar__links" id="skills-page">Techstack</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#soft_skills" class="navbar__links" id="skills-page">Skills</a>
                 </li>
                 <li class="navbar__item">
                     <a href="#projects" class="navbar__links" id="projects-page">Projects</a>
@@ -314,6 +317,39 @@
                             class="pro-btn">Source code <i class="fa fa-external-link"></i></button></a>
 
                     <a href="https://funny-selkie-392078.netlify.app/" target="_blank"><button class="pro-btn">Live <i
+                                class="fa fa-external-link"></i></button></a>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="pro-card">
+
+            <div class="l-pro-card">
+                <img class="pro-img" id="pro-img2" src="./resources/images/CrimeManagement.png" alt="CIMS">
+            </div>
+
+            <div class="r-pro-card">
+
+                <h3 class="pro-title">Crime Information Management System</h3>
+
+                <p class="pro-desc">
+                    The main aim of this Crime Information Management System is to maintain and manage the detail information of the crime happened in an area under a particular police station. This software will be used by the police officials in the Police station. It is a simple console based project
+                </p>
+
+                <p class="pro-desc">
+                    <span class="pro-lower-title">Tech Stack : </span>
+                    JAVA | JDBC | SQL
+                </p>
+
+                <p class="pro-desc">Individual project, built in 5 days.</p>
+
+                <div class="btn-div">
+                    <a href="https://github.com/Ninadjoshi212/huge-end-8625" target="_blank"><button
+                            class="pro-btn">Source code <i class="fa fa-external-link"></i></button></a>
+
+                    <a href="https://drive.google.com/file/d/1cK0P0JTV_ZcZ5pg9i7twaYVaOGlnDFcc/view?usp=share_link" target="_blank"><button class="pro-btn">Video <i
                                 class="fa fa-external-link"></i></button></a>
                 </div>
 
