--- a/index.html
+++ b/index.html
@@ -332,18 +332,18 @@
 
             <div class="r-pro-card">
 
-                <h3 class="pro-title">Crime Information Management System</h3>
+                <h3 class="pro-title">Online Cab Booking Application</h3>
 
                 <p class="pro-desc">
-                    The main aim of this Crime Information Management System is to maintain and manage the detail information of the crime happened in an area under a particular police station. This software will be used by the police officials in the Police station. It is a simple console based project
+                    We have created REST API for Online Cab Booking Application which can be used by Customers and Drivers to login into their profile, update their details and Book Cabs with option to select cab type and the cab or driver availability.
                 </p>
 
                 <p class="pro-desc">
                     <span class="pro-lower-title">Tech Stack : </span>
-                    JAVA | JDBC | SQL
+                    JAVA | springboot | Hibernate | Sql
                 </p>
 
-                <p class="pro-desc">Individual project, built in 5 days.</p>
+                <p class="pro-desc">A collaborative project, built in 5 days by a team of 5 members.</p>
 
                 <div class="btn-div">
                     <a href="https://github.com/Ninadjoshi212/huge-end-8625" target="_blank"><button
