--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
         <div class="pro-card">
 
             <div class="l-pro-card">
-                <img class="pro-img" id="pro-img2" src="./resources/images/CrimeManagement.png" alt="CIMS">
+                <img class="pro-img" id="pro-img2" src="./resources/images/ER Cab.png" alt="OCBS">
             </div>
 
             <div class="r-pro-card">
